# Project-NUEVO-Group1

./: .gitignore  LIDAR.md  README.md  RPi Commands.md
docs/: COMMUNICATION_PROTOCOL.md  rpi_readonly_filesystem_fix.md
docs/lab_manual/: README.md
docs/lab_manual/Lab1_ROS2/: main.tex  plot_step_response.m
docs/lab_manual/Lab_system_setup/: GPS_LiDAR_COORDINATES.md  README.md
docs/lab_manual/Lab_vision_node/: main.tex
docs/manual/: MANUAL.md
docs/ros2/: README.md  bridge_runtime.md  integration_test.md  ros2_nodes_design.md  rpi_setup.md  troubleshooting.md  vision_node.md
firmware/arduino/: arduino.ino
firmware/arduino/src/: ISRScheduler.cpp  ISRScheduler.h  SystemManager.cpp  config.h
firmware/docs/assets/: FIGURES.md
nuevo_ui/backend/nuevo_bridge/: TLV_TypeDefs.py  app.py  mag_calibration.py  message_router.py  payloads.py  ros2_converters.py  ros2_node.py  runtime.py  serial_manager.py
nuevo_ui/docs/: architecture.md
nuevo_ui/scripts/: build.sh
ros2_ws/: README.md  TEST.md  TEST_INSTRUCTIONS.md  impl_plan.md  setup_rpi.sh  setup_rpi_uart.sh  update_plan.md
ros2_ws/docker/: Dockerfile.robot  README.md  ROS_LOCALHOST_ONLY.md  check_rpi_runtime.sh  docker-compose.jetson.yml  docker-compose.rpi.yml  docker-compose.vm.yml  enter_ros2.sh  entrypoint.robot.sh  restart.sh
ros2_ws/host_camera/: README.md  check.sh  install.sh  pi-camera-feed  pi-camera-feed.service  pi-camera.env
ros2_ws/src/robot/: README.md  ROBOT_NODE_DESIGN.md  package.xml  setup.cfg
ros2_ws/src/robot/launch/: everything.launch.py  everything_but_robot.launch.py  lidar_obstacle_test.launch.py  orientation_fusion_demo.launch.py  position_fusion_demo.launch.py  robot.launch.py  robot2.launch.py
ros2_ws/src/robot/robot/: API_REFERENCE.md  __init__.py  gps_navigation.py  hardware_map.py  lidar_scan.py  main.py  obstacle_tracking.py  path_planner.py  robot.py  scripted_navigation.py  sensor_fusion.py  test_gps_navigation.py  test_orientation_fusion.py  test_position_fusion.py  test_scripted_navigation.py  test_zero_kinematics.py
ros2_ws/src/robot/robot/ai_codegen/: README.md  ai_agent_codegen.md  test_UML_generated.py  uml_statechart_guide.md
ros2_ws/src/robot/robot/examples/: README.md  apf_obstacle_avoidance.py  lidar_obstacle_test.py  manipulation.py  motion_basics.py  new_example.py  obstacle_avoidance_apf.py  obstacle_avoidance_pp.py  pure_pursuit.py  sensor_verification.py  traffic_light_leds.py  user_io.py
ros2_ws/src/robot/robot/examples/legacy/: apf_obstacle_avoidance.py  buttons_and_leds.py  lidar_obstacle_test.py  manipulation.py  motion_basics.py  move_servos.py  orientation_fusion_demo.py  position_fusion_demo.py  pure_pursuit.py  sensor_verification.py  vm_demo.py
ros2_ws/src/robot/robot/robot_impl/: hardware.py  legacy.py  navigation.py  sensors.py
ros2_ws/src/robot/test/: plot_path_planner_scenarios.py  test_obstacle_tracking.py  test_path_planner.py  test_position_fusion.py  test_position_fusion_runtime.py  test_robot_api.py
ros2_ws/src/rplidar_ros/: CMakeLists.txt  README.md  package.xml
ros2_ws/src/rplidar_ros/launch/: rplidar_c1.launch.py
ros2_ws/src/rplidar_ros/scripts/: install_udev_rule.sh  uninstall_udev_rule.sh
ros2_ws/src/rplidar_ros/src/: rplidar_c1_node.cpp
ros2_ws/src/rplidar_ros/udev/: 99-rplidar-c1.rules
ros2_ws/src/vision/: README.md  VISION_NODE_PLAN.md  package.xml  setup.cfg  setup.py
ros2_ws/src/vision/data/: .gitignore  README.md
ros2_ws/src/vision/data/yolo26n_ncnn_imgsz_416/: metadata.yaml  model.ncnn.param
ros2_ws/src/vision/data/yolo26n_ncnn_imgsz_640/: metadata.yaml
ros2_ws/src/vision/launch/: vision_debug.launch.py  vision_production.launch.py
ros2_ws/src/vision/test/: test_rule_based_detection.py  test_stop_sign.py
ros2_ws/src/vision/vision/: camera_utils.py  debug_utils.py  model_utils.py  rule_based_detection.py  stop_sign.py  timing_utils.py  traffic_light.py  vision_node.py
ros2_ws/src/vision/vision_model_benchmark/: .gitignore  README.md  benchmark_ultralytics.py  export_model.py  live_detect.py  requirements.txt
ros2_ws/tests/: TEST_UART_README.md  test_uart_arduino.py
tlv_protocol/: TLV_Payloads.md  TLV_TypeDefs.json
(+39 files in other folders)
