[metadata]
name = robot
version = 0.1.0
description = Main ROS2 package for robot behavior, bringup, and assets
author = MAE 162 Staff
license = MIT

[options]
packages = find:
install_requires =
    setuptools

[options.packages.find]
include = robot*

[options.data_files]
share/ament_index/resource_index/packages =
    resource/robot
share/robot =
    package.xml
share/robot/launch =
    launch/everything_but_robot.launch.py
    launch/lidar_obstacle_test.launch.py
    launch/orientation_fusion_demo.launch.py
    launch/position_fusion_demo.launch.py
    launch/robot.launch.py

[options.entry_points]
console_scripts =
    orientation_fusion_demo = robot.examples.orientation_fusion_demo:main
    position_fusion_demo = robot.examples.position_fusion_demo:main
    new_example = robot.examples.new_example:main
    robot = robot.robot_node:main

[develop]
script_dir = $base/lib/robot
[install]
install_scripts = $base/lib/robot
