<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision</name>
  <version>0.1.0</version>
  <description>ROS2 package for camera and perception nodes.</description>
  <maintainer email="pc.toby.chen@gmail.com">Toby Chen</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>ament_index_python</depend>
  <depend>rclpy</depend>
  <depend>bridge_interfaces</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
